hphp/test/slow/nullsafe/nullsafe-prop-13.php.expectf

Fatal error: You cannot decorate this argument as inout in %stest/slow/nullsafe/nullsafe-prop-13.php on line 7
